# ChangeLog for dev-java/icedtea6
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Nov 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild: 
	Bump to b39.
	
  27 Oct 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild icedtea-1.7.ebuild: 
	Rename back to IcedTea; can't handle difference between this and repository.
	
  27 Oct 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea7-9999.ebuild icedtea7-1.7.ebuild: 
	Bump to b38 and rename to IcedTea7.
	
  22 Sep 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-1.7.ebuild:
  	Switch to the Free lesstif OpenMotif build as this is Free software.
	
  01 Sep 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-1.7.ebuild icedtea-9999.ebuild:
	Merge changes from icedtea6 ebuilds and update to b33.
	
  29 Aug 2008; Vlastimil Babka <caster@gentoo.org> -icedtea-1.6.ebuild:
  Remove the old 1.6 version.

  15 Aug 2008; Petteri Räty <betelgeuse@gentoo.org> icedtea-9999.ebuild:
  Remove keywords so users don't get the live ebuild by default.

  01 Aug 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> metadata.xml:
	Document zero USE flag.

  01 Aug 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-1.7.ebuild icedtea-9999.ebuild:
        Use dest not ddest for examples directory creation.

  31 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-1.7.ebuild icedtea-9999.ebuild:
        Create directory for examples.

  29 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild:
        Only check for Rhino jar when enabled.

  27 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild:
        Handle Rhino dependency.

  25 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild:
	Fix OpenJDK tarball URL.
	
  24 Jul 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild:
	Remove unneeded OpenMotif dependency.
	