@@ -1,9 +1,11 @@
 AUX icedtea.env 976 RMD160 2c1c76913b7a59d6622fffd4976808143010b168 SHA1 426e9bcb6408b172ae99bd4e54bbb62d9cedc018 SHA256 f4e08ca91376d1f3216b152bad69898d00cf67a475f3bf8a652ca8c01212fe3f
 DIST cacao-0.99.3.tar.gz 4244669 RMD160 c5e0222e65e111ae70ac73f082aa0016f9a718dc SHA1 9c963dc63c9ff6e6a891d1f47666af66753fe65b SHA256 81316b9f84c654e139def3572c1aa099a05f7fd9a60a973236ae0d0dc6376a03
 DIST icedtea-1.7.tar.gz 3265446 RMD160 b01c673f37dd2a845a37fcf84328044b4d3d356c SHA1 86045eebe5a905dd350eb82f6a34fbafedbbe94c SHA256 3974a61599a1e37e3a1d294551e99e3efb97054c8a89d6d0cf57765c2bcf954c
+DIST icedtea-1.8.tar.gz 5882607 RMD160 36e0decee1e9f04f94dcb625e5ad5d200709224a SHA1 b55281fe606c475c67c470ebd1490ab41fcc4452 SHA256 5478e8099812563deb4ac555effaa1f67b4b65f422cbe81909d716625e14368e
 DIST openjdk-7-ea-src-b26-24_apr_2008.zip 84562183 RMD160 00668d68d6c2e6ccdf0bb22c24ae33ab0067f749 SHA1 1b4c141af998e4415fdf0bec0aef14de36f8c6b2 SHA256 89a79852fb56c8bf7db5039626df9a6f1124b52b3c7130575757fb84b192e64f
 DIST openjdk-7-ea-src-b39-06_nov_2008.zip 87587078 RMD160 1100e53d780d1910ad6479973f8ae1dbc351a704 SHA1 af308b485c6670b0bb9e7873d1c8486e819179fa SHA256 ae73744f26620ae00d718c5731438ab1a9d0a74678c5afb561bd90c036072208
 EBUILD icedtea-1.7.ebuild 4524 RMD160 7a3a84671288b270840a07aab985215be000a373 SHA1 ec6d74c7fbff54c854d116dfd3dde33b9e218485 SHA256 6d7ef527ebbc2c386386eabb9f6d701ae1b3ce27f61118eddab50c064e947d6b
+EBUILD icedtea-1.8.ebuild 6735 RMD160 671672e8a9dba80173400eea394eb20d4a305ee5 SHA1 67666ef2e52519b805b360db3f9f432c4d8f21ed SHA256 c58c084e69268a6b3c37715cdf33aef9cc3f4079e25995ae99f3ad7b1a1cb50d
 EBUILD icedtea-9999.ebuild 5883 RMD160 d8c8c287cce25de02369254c7c5f08071411b894 SHA1 5ddb5d11548b19b779658e708853aa0b0a3b267e SHA256 a29f4955113d1427bb971cdac9703c8e002ee58051043c149e9aabb2aff6a1cf
-MISC ChangeLog 2426 RMD160 803526432c150d2e748115ac7763cb5273285697 SHA1 6561d3e7467fe5cec9b2d0aebae1b64b71c1d57e SHA256 6fd5be336cfbda622ec2fccca03075d594a6ed60c8e0e0729cf4459d562f4e0f
+MISC ChangeLog 2602 RMD160 01380e109db254a5bd536dd8ec8e1b6d108310c1 SHA1 cf874ae58cb6ad4d14c2385f8719bd77933dfda1 SHA256 66ae921924ba60cf28153a0d39edd7bae6919be5afbf46635adc222cd566d340
 MISC metadata.xml 788 RMD160 8c59be5953b34585dfbb7c37ac40540aa566d97f SHA1 c9b3a82fd52b7518f0b96ff84557b80058b1042b SHA256 9a07bc61a5da6ab8c7501263f3babf5c845f80f0a317503f9177a266051f0c87
