@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*icedtea-1.8 (21 11 2008)
+
+  21 Nov 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild: 
+	New release - created from IcedTea6 and IcedTea7 9999 ebuilds.
+
   10 Nov 2008; Andrew John Hughes <gnu_andrew@member.fsf.org> icedtea-9999.ebuild: 
 	Bump to b39.
 	
